# Add rules here to build your software
# See https://docs.bazel.build/versions/master/build-ref.html#BUILD_files


exports_files(["tsconfig.json"],visibility = ["//:__subpackages__"])

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "server",
    srcs = ["server.ts"],
    deps = [
        "@npm//fastify",
        "@npm//@types/node",
        "@npm//fastify-static"
    ]
)

filegroup(
    name = "static_files",
    srcs = [
        "index.html"
    ]
)

nodejs_binary(

    name = "server_bin",
    entry_point = "server.ts",
    data = [
        ":server",
        "//game:browser_bundle",
        "//:static_files",
        "//game:client_lib",
        # For sourcemapping
        "//game:sources",
        "node_modules",
    ],
)

