#
package(default_visibility = ["//visibility:public"])
load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@npm//@bazel/esbuild:index.bzl", "esbuild")


filegroup(
    name = "sources",
    srcs = glob(["**/*.ts"]),
)

ts_library(
    name = "client_lib",
    srcs = glob(["*.ts"]),
    
    deps = [
        "@npm//three",
        "@npm//@types/three",
        "@npm//pixi.js",
        "@npm//nova_ecs",
    ]
)



esbuild(
    name = "browser_bundle",
    entry_point = "index.ts",
    target = "es2015",
    minify = False,
    define = [
        "process.env.NODE_ENV=\"browser\""
    ],
    link_workspace_root = True,
    tool = select({
        "@bazel_tools//src/conditions:darwin": "@esbuild_darwin//:bin/esbuild",
        "@bazel_tools//src/conditions:windows": "@esbuild_windows//:esbuild.exe",
        "@bazel_tools//src/conditions:linux_x86_64": "@esbuild_linux//:bin/esbuild",
    }),
    deps = [
        ":client_lib",
    ],
)
