package(default_visibility = ["//visibility:public"])
load("@npm//@bazel/concatjs:index.bzl", "ts_library")
load("@npm//@bazel/esbuild:index.bzl", "esbuild")
load("@npm//@bazel/concatjs:index.bzl", "concatjs_devserver")


ts_library(
    name = "client_lib",
    srcs = glob(["*.ts"]),
    deps = [
        "@npm//three",
        "@npm//@types/three",
        "@npm//pixi.js",
        "@npm//nova_ecs",
    ]
)

esbuild(
    name = "browser_bundle",
    entry_point = "index.ts",
    target = "es2015",
    format = "iife",
    minify = False,
    # define = {
    #     "process.env.NODE_ENV": "browser",
    # },
    link_workspace_root = True,
    deps = [
        ":client_lib",
    ],
    args = {
        "resolveExtensions": [".mjs", ".js"],
    },
    sources_content = True,
)


concatjs_devserver(
    name = "app_devserver",
    entry_module = "threejs_racing_game/game/browser_bundle",
    deps = [],
    static_files = [
        ":browser_bundle",
    ]
)
